--- a/app/src/main/res/layout/activity_categories.xml
+++ b/app/src/main/res/layout/activity_categories.xml
@@ -10,14 +10,14 @@
 
 
     <ImageView
-        android:id="@+id/ic_back"
+        android:id="@+id/back_arrow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_marginStart="10dp"
         android:layout_marginTop="16dp"
-        app:srcCompat="@drawable/ic_back"
-        android:contentDescription="@null" />
+        android:contentDescription="@null"
+        app:srcCompat="@drawable/ic_back" />
 
     <TextView
         android:id="@+id/choose_category"
