--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -29,10 +29,10 @@
       android:layout_marginTop="48dp"
       android:layout_marginEnd="36dp"
       android:background="@drawable/text_input"
-      android:drawableLeft="@drawable/ic_user"
+      android:drawableStart="@drawable/ic_user"
       android:drawablePadding="10dp"
       android:ems="10"
-      android:hint="Username"
+      android:hint="@string/username"
       android:inputType="textPersonName"
       android:minHeight="48dp"
       android:paddingLeft="20dp"
@@ -52,10 +52,10 @@
       android:layout_height="wrap_content"
       android:layout_marginTop="16dp"
       android:background="@drawable/text_input"
-      android:drawableLeft="@drawable/ic_email"
+      android:drawableStart="@drawable/ic_email"
       android:drawablePadding="10dp"
       android:ems="10"
-      android:hint="Email"
+      android:hint="@string/email"
       android:inputType="textEmailAddress"
       android:minHeight="48dp"
       android:paddingLeft="20dp"
@@ -75,15 +75,15 @@
       android:layout_height="wrap_content"
       android:layout_marginTop="16dp"
       android:background="@drawable/text_input"
-      android:drawableLeft="@drawable/ic_password"
+      android:drawableStart="@drawable/ic_password"
       android:drawablePadding="10dp"
       android:ems="10"
-      android:hint="Password"
+      android:hint="@string/password"
       android:inputType="textPassword"
       android:minHeight="48dp"
-      android:paddingLeft="20dp"
+      android:paddingStart="20dp"
       android:paddingTop="10dp"
-      android:paddingRight="10dp"
+      android:paddingEnd="10dp"
       android:paddingBottom="10dp"
       android:textColor="@color/white"
       android:textColorHint="@color/white"
