--- a/app/src/main/res/layout/activity_single_player_quiz.xml
+++ b/app/src/main/res/layout/activity_single_player_quiz.xml
@@ -82,6 +82,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="Question"
+            android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="20sp"/>
 
