--- a/app/src/main/res/layout/activity_survival_quiz.xml
+++ b/app/src/main/res/layout/activity_survival_quiz.xml
@@ -1,137 +1,189 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/survival_back"
-    tools:context=".SurvivalQuizActivity">
+    tools:context=".SurvivalQuizActivity"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/input_text"
-        android:layout_width="388dp"
-        android:layout_height="77dp"
-        android:layout_gravity="center_horizontal|center"
-        android:fontFamily="@font/ribeye_marrow"
-        android:gravity="center"
-        android:text="@string/survival_un"
-        android:textColor="@color/white"
-        android:textSize="38sp"
-        android:textStyle="normal"
-        app:layout_constraintBottom_toTopOf="@+id/rectangle_41"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.71000004" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="79dp"
+        android:background="@color/black_opacity_25">
+
+        <ImageView
+            android:id="@+id/back_arrow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="20dp"
+            android:contentDescription="@null"
+            app:srcCompat="@drawable/ic_back" />
 
 
-    <View
-        android:id="@+id/rectangle_41"
-        android:layout_width="330dp"
-        android:layout_height="300dp"
-        android:alpha="0.2"
-        android:background="@drawable/textview_20opacity"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/roundNum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/ribeye_marrow"
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp"
+            android:text="Round 1"
+            android:textColor="@color/white"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/survival_start_str3"
-        android:layout_width="250dp"
-        android:layout_height="75dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/survival_start_str3"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@+id/survival_start_str2"
-        app:layout_constraintStart_toStartOf="@+id/survival_start_str2"
-        app:layout_constraintTop_toBottomOf="@+id/survival_start_str2" />
 
-    <TextView
-        android:id="@+id/survival_start_str2"
-        android:layout_width="250dp"
-        android:layout_height="75dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/survival_start_str2"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@+id/survival_start_str1"
-        app:layout_constraintStart_toStartOf="@+id/survival_start_str1"
-        app:layout_constraintTop_toBottomOf="@+id/survival_start_str1" />
+        <TextView
+            android:id="@+id/timer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="15dp"
+            android:drawablePadding="5dp"
+            android:text=""
+            android:textColor="@color/white"
+            android:textSize="22sp"
+            app:drawableLeftCompat="@drawable/ic_timer" />
 
-    <TextView
-        android:id="@+id/survival_start_str1"
-        android:layout_width="250dp"
-        android:layout_height="60dp"
-        android:text="@string/survival_start_str1"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/rectangle_41"
-        app:layout_constraintEnd_toEndOf="@+id/rectangle_41"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/rectangle_41"
-        app:layout_constraintTop_toTopOf="@+id/rectangle_41"
-        app:layout_constraintVertical_bias="0.125" />
+    </RelativeLayout>
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintEnd_toStartOf="@+id/survival_start_str1"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/rectangle_41"
-        app:layout_constraintTop_toTopOf="@+id/rectangle_41"
-        app:srcCompat="@drawable/compass" />
 
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="140dp"
+        android:layout_marginStart="26dp"
+        android:layout_marginEnd="26dp"
+        android:layout_marginTop="24dp"
+        app:cardCornerRadius="15dp"
+        tools:ignore="NotSibling">
+
+        <TextView
+            android:id="@+id/question"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textAlignment="center"
+            android:text="Question"
+            android:textColor="@color/black"
+            android:textSize="20sp"/>
+
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="40dp"
+        app:cardCornerRadius="10dp"
+        tools:ignore="NotSibling">
+
+        <TextView
+            android:id="@+id/option1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="Option1"
+            android:textColor="@color/black"
+            android:textSize="18sp"/>
+
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="20dp"
-        app:layout_constraintEnd_toEndOf="@+id/imageView3"
-        app:layout_constraintStart_toStartOf="@+id/imageView3"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3"
-        app:srcCompat="@drawable/medal" />
+        android:layout_marginEnd="40dp"
+        app:cardCornerRadius="10dp">
 
-    <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/option2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="Option2"
+            android:textColor="@color/black"
+            android:textSize="18sp"/>
+
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="40dp"
+        app:cardCornerRadius="10dp">
+
+        <TextView
+            android:id="@+id/option3"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="Option3"
+            android:textColor="@color/black"
+            android:textSize="18sp"/>
+
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="40dp"
+        app:cardCornerRadius="10dp">
+
+        <TextView
+            android:id="@+id/option4"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="Option4"
+            android:textColor="@color/black"
+            android:textSize="18sp"/>
+
+
+    </androidx.cardview.widget.CardView>
+
+
+    <TextView
+        android:id="@+id/currentUsername"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="22dp"
-        app:layout_constraintEnd_toEndOf="@+id/imageView4"
-        app:layout_constraintStart_toStartOf="@+id/imageView4"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4"
-        app:srcCompat="@drawable/treasure" />
+        android:layout_marginTop="25dp"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:text="TextView"
+        android:textColor="@color/brown"
+        android:textStyle="bold"
+        android:textSize="20sp"/>
 
-    <Button
-        android:id="@+id/btn_play"
-        android:layout_width="0dp"
+
+    <TextView
+        android:id="@+id/opponentName"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="115dp"
-        android:background="@drawable/btn_play"
-        android:fontFamily="@font/ribeye_marrow"
-        android:text="@string/play"
-        android:textColor="@color/white"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="@+id/rectangle_41"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/rectangle_41"
-        app:layout_constraintTop_toBottomOf="@+id/rectangle_41" />
-
-    <ImageView
-        android:id="@+id/imageView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
-        app:layout_constraintBottom_toTopOf="@+id/input_text"
-        app:layout_constraintEnd_toEndOf="@+id/input_text"
-        app:layout_constraintHorizontal_bias="0.985"
-        app:layout_constraintStart_toStartOf="@+id/input_text"
-        app:srcCompat="@drawable/cancel" />
+        android:layout_marginTop="15dp"
+        android:layout_gravity="center"
+        android:text="TextView"
+        android:gravity="center"
+        android:textColor="@color/brown"
+        android:textStyle="bold"
+        android:textSize="20sp"/>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</LinearLayout>
