--- a/app/src/main/res/layout/fragment_bonus_games.xml
+++ b/app/src/main/res/layout/fragment_bonus_games.xml
@@ -113,8 +113,7 @@
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView_bonus"
-            />
+            app:layout_constraintTop_toBottomOf="@+id/textView_bonus" />
 
 
         <TextView
